# clean-core

./: .clang-format  .gitignore  CMakeLists.txt  Credits.md  README.md  clean_core.natvis
cmake/: AddLibrary.cmake  AddTest.cmake  CompileOptions.cmake  SourceGroup.cmake  UnityBuild.cmake
include/cc/: assert  breakpoint  fwds  hash  less  macros  move  optional  pair  span  swap  typedefs  unique_ptr  vector
include/cc/detail/: aligned_storage.hh  assert.hh  breakpoint.hh  error.hh  hash.hh  less.hh  macros.hh  monostate.hh  move.hh  optional.hh  pair.hh  swap.hh  typedefs.hh  unique_ptr.hh
include/cc/detail/traits/: add_reference.hh  declval.hh  has_operator.hh  is_assignable_from.hh  is_constructible_from.hh  is_same.hh  remove_reference.hh  true_false_type.hh
include/cc/fwd/: hash.hh  less.hh  optional.hh  pair.hh  span.hh  unique_ptr.hh
src/: assert.cc  breakpoint.cc
src/cc/: algorithms.hh  aligned_storage.hh  always_false.hh  array.hh  assert.cc  assert.hh  breakpoint.cc  breakpoint.hh  cursor.hh  fwd.hh  hash.hh  less.hh  optional.hh  pair.hh  span.hh  typedefs.hh  unique_ptr.hh
src/clean-core/: algorithms.hh  aligned_storage.hh  alloc_array.hh  alloc_function.hh  alloc_vector.hh  allocate.hh  allocator.cc  allocator.hh  allocator.scratch.cc  allocator.tlsf.cc  allocator.virtual.cc  always_false.hh  any_of.hh  apply.hh  array.hh  assert.cc  assert.hh  assertf.hh  atomic_linked_pool.cc  atomic_linked_pool.hh  base64.cc  base64.hh  bit_cast.hh  bits.hh  bitset.hh  breakpoint.cc  breakpoint.hh  capped_array.hh  capped_box.hh  capped_vector.hh  char_predicates.hh  collection_traits.hh  constant_function.hh  cursor.hh  defer.hh  demangle.cc  demangle.hh  dont_deduce.hh  enable_if.hh  enum_flags.hh  (+86 more)
src/clean-core/allocators/: atomic_linear_allocator.cc  atomic_linear_allocator.hh  atomic_pool_allocator.cc  atomic_pool_allocator.hh  linear_allocator.cc  linear_allocator.hh  stack_allocator.cc  stack_allocator.hh  synced_tlsf_allocator.cc  synced_tlsf_allocator.hh  synced_virtual_linear_allocator.cc  synced_virtual_linear_allocator.hh  system_allocator.cc  system_allocator.hh  tlsf_allocator.cc  tlsf_allocator.hh  virtual_linear_allocator.cc  virtual_linear_allocator.hh  virtual_stack_allocator.cc  virtual_stack_allocator.hh
src/clean-core/detail/: compact_size_t.hh  container_impl_util.hh  has_operator.hh  is_container.hh  is_contiguous_container.hh  is_reference_wrapper.hh  reference_wrapper.hh  remove_reference.hh  srange.hh  vector_base.hh
src/clean-core/detail/lib/: StackWalker.cc  StackWalker.hh  tlsf.cc  tlsf.hh
src/clean-core/detail/xxHash/: xxh3.hh  xxhash.cc  xxhash.hh
src/clean-core/experimental/: box.hh  chunked_buffer.hh  clamped_span.hh  disjoint_set.hh  filewatch.cc  filewatch.hh  flat_vector_of_vector.hh  mpmc_queue.hh  pimpl.hh  ringbuffer.hh  wrapped_span.hh
src/clean-core/native/: memory.cc  memory.hh  timing.cc  timing.hh  wchar_conversion.cc  wchar_conversion.hh  win32_fwd.hh  win32_sanitized.hh  win32_util.cc  win32_util.hh
src/clean-core/native/detail/: win32_sanitize_after.inl  win32_sanitize_before.inl
tests/: CMakeLists.txt  alloc-benchmark.cc  allocator.cc  any_of.cc  array.cc  base64.cc  bits.cc  chunked_buffer.cc  clamped_span.cc  collection_traits.cc  flags.cc  format.cc  forward_list.cc  from_string.cc  function_ref.cc  functors.cc  hash-comparison.cc  hash.cc  hash.sha1.cc  indices_of.cc  invoke.cc  map.cc  optional.cc  pretty-printer.cc  range_ref.cc  result.cc  set.cc  sort.cc  span.cc  special_types.hh  stream_ref.cc  strided_span.cc  string.cc  string_stream.cc  string_view.cc  structured_bindings.cc  swap.cc  to_string.cc  tuple.cc  types.cc  (+7 more)
